# vacuum_cleaner_pkg

./: CMakeLists.txt  README.md  package.xml
data/map_model/: model.config  model.sdf  stl_size.json
data/map_model/tiff_files/: tiff1.tiff  tiff2.tiff
data/p109/: lab_map.pgm  model.config  model.sdf  my_model.stl
data/p109/tiff_files/: tiff2.tiff
msg/: Bumper.msg
random/: Output1.tiff  model.config  model.sdf  stuff.dae  stuff.stl
random_maps/: model.config  model.sdf  random_map.pgm  stuff.stl  stuff2.stl  test.world  test3.py
scripts/: drawImage.py  drawRoom.py  gazeboRandomSpawnModel.py  gazebo_random_spawn_model.py  pgmToStl.py  room.py  roomHandler.py  roomParams.py  test.py  test2.py  test4.py  test5.py  worldMapModelGenerator.py  worldMapPngGenerator.py
src/: bumper_sim.cpp  covering_algorithm.cpp  draw_robot_pose_on_map.cpp  example_nodes.hpp  score_algorithm.cpp  turtlebot_control.cpp  vacuum_cleaner_node.cpp  vc_node_copy
src/covering_algorithms/: CoveringAlgorithm.cpp  CoveringAlgorithm.h  CoveringAlgorithmHandler.cpp  RandomWalk.h  SnakingWalk.cpp  SnakingWalk.h  SpiralWalk.cpp  SpiralWalk.h
src/robot_handler/: LaserHandler.cpp  LaserHandler.h  OdomHandler.cpp  OdomHandler.h  RobotController.h
src/score_algorithm/: DrawRobotPoseOnMap.cpp  ScoreAlgorithm.cpp
src2/: CoveringAlgorithm.cpp  CoveringAlgorithm.h  OdomHandler.cpp  OdomHandler.h  RobotControler.cpp  RobotControler.h  main.cpp  odom_handler.cpp  robot_control_keypad.cpp  snaking.cpp
src2/covering_algorithms/: CoveringAlgorithm.cpp  CoveringAlgorithm.h  CoveringAlgorithmHandler.cpp  CoveringAlgorithmHandler.h  RandomWalk.cpp  RandomWalk.h  SnakingWalk.cpp  SpiralWalk.cpp  SpiralWalk.h  snaking.cpp
src2/robot_handler/: LaserHandler.cpp  LaserHandler.h  OdomHandler.cpp  OdomHandler.h  RobotControler.h  RobotController.cpp  RobotController.h
trash/src/: draw_robot_pose_on_map.cpp  score_algorithm.cpp
